--- a/pom.xml
+++ b/pom.xml
@@ -12,55 +12,105 @@
 	<artifactId>slowl</artifactId>
 	<version>0.1.0-SNAPSHOT</version>
 	<name>SLOWL</name> 
-	<description>A plugin allowing standpoint-reasoning in Protégé</description> 
+	<description>Translation tool allowing the extension of standard OWL2 ontologies with standpoint logic.</description> 
 
 
-	<packaging>bundle</packaging>
+	<packaging>jar</packaging>
 
 	
 	<dependencies>
-		<dependency>
+		<!--<dependency>
 			<groupId>edu.stanford.protege</groupId>
 			<artifactId>org.protege.common</artifactId>
 			<version>4.3.0</version>
-		</dependency>
-
-		<dependency>
+		</dependency>-->
+		
+		<!--<dependency>
+			<groupId>edu.stanford.protege</groupId>
+			<artifactId>protege-editor-core</artifactId>
+			<version>5.5.0</version>
+		</dependency>-->
+		
+		<!--<dependency>
 			<groupId>edu.stanford.protege</groupId>
 			<artifactId>org.protege.editor.core.application</artifactId>
 			<version>4.3.0</version>
-		</dependency>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>-->
 
-		<dependency>
+		<!--<dependency>
 			<groupId>edu.stanford.protege</groupId>
 			<artifactId>org.protege.editor.owl</artifactId>
 			<version>4.3.0</version>
-		</dependency>
+			<exclusions>
+				<exclusion>
+					<groupId>junit</groupId>
+					<artifactId>junit</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>-->
 		
 		<dependency>
 			<groupId>net.sourceforge.owlapi</groupId>
 			<artifactId>owlapi-distribution</artifactId>
-			<version>5.1.20</version>
+			<version>5.5.0</version>
 		</dependency>
 		
-		<dependency>
+		<!--<dependency>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>owlapi-api</artifactId>
+			<version>5.5.0</version>
+		</dependency>-->
+		
+		<!--<dependency>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>owlapi-apibinding</artifactId>
+			<version>5.5.0</version>
+		</dependency>-->
+		
+		<!--<dependency>
+			<groupId>net.sourceforge.owlapi</groupId>
+			<artifactId>owlapi-osgidistribution</artifactId>
+			<version>5.5.0</version>
+		</dependency>-->
+		
+		<!--<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.1</version>
-		</dependency>
+		</dependency>-->
 		
-		<dependency>
+		<!--<dependency>
 			<groupId>org.codehaus.plexus</groupId>
 			<artifactId>plexus-utils</artifactId>
 			<version>1.1</version>
-		</dependency>
+		</dependency>-->
 		
-		<dependency>
+		<!--<dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
             <scope>test</scope>
-        </dependency>
+        </dependency>-->
+		
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.9.2</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<!--<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.9.1</version>
+			<scope>test</scope>
+		</dependency>-->
 		
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -73,6 +123,18 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>2.0.4</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>commons-cli</groupId>
+			<artifactId>commons-cli</artifactId>
+			<version>1.5.0</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.12.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -82,55 +144,23 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.10.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>9</source>
+					<target>9</target>
+					<release>9</release>
 				</configuration>
 			</plugin>
 			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>3.0.0-M7</version>
+				<version>3.0.0-M5</version>
 				<dependencies>
 					<dependency>
 						<groupId>org.apache.maven.surefire</groupId>
-						<artifactId>surefire-junit47</artifactId>
-						<version>3.0.0-M7</version>
+						<artifactId>surefire-api</artifactId>
+						<version>3.0.0-M5</version>
 					</dependency>
 				</dependencies>
-			</plugin>
-			
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>5.1.8</version>
-				<extensions>true</extensions>
-				<configuration>
-					<instructions>
-						<Bundle-ClassPath>.</Bundle-ClassPath>
-						<Bundle-SymbolicName>${project.artifactId};singleton:=true</Bundle-SymbolicName>
-						<Bundle-Vendor>The Protege Development Team</Bundle-Vendor>
-						<Import-Package>
-							<!-- org.apache.log4j.*;version="[1.2,2)", --> 
-							<!-- org.protege.editor.core.*;version="4.3", -->
-							org.protege.editor.owl.*;version="4.3",
-							<!-- org.semanticweb.owl.owlapi;version="[1,5)", -->
-							*
-						</Import-Package>
-						<Include-Resource>plugin.xml, {maven-resources}</Include-Resource>
-						<!-- <Private-Package>skeleton</Private-Package> -->
-					</instructions>
-					<buildDirectory>${env.PROTEGE_HOME}/plugins</buildDirectory>
-					<executions>
-						<execution>
-							<id>bundle-manifest</id>
-							<phase>install</phase>
-							<goals>
-								<goal>manifest</goal>
-							</goals>
-						</execution>
-					</executions>
-				</configuration>
 			</plugin>
 			
 			<plugin>
@@ -138,17 +168,36 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.3.0</version>
 				<configuration>
-					<encoding>UTF-8</encoding>
-					<manifest>
-						<addClasspath>true</addClasspath>
-					</manifest>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>de.tu_dresden.inf.iccl.slowl.App</mainClass>
+						</manifest>
+					</archive>
 				</configuration>
 			</plugin>
 			
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-eclipse-plugin</artifactId>
-				<version>2.10</version>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.4.1</version>
+				<configuration>
+					<!-- put your configurations here -->
+				</configuration>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.5.0</version>
 			</plugin>
 		</plugins>
 	</build>
